# advent-of-code

./: build.sbt
2015/scala/aoc-2015/: build.sbt
2015/scala/aoc-2015/src/main/scala/aof/: Day01.scala  Day02.scala  Day03.scala  Day04.scala  Day05.scala  Day06.scala  Day07.scala
2016/scala/aoc-2016/: .gitignore  build.sbt
2016/scala/aoc-2016/src/main/scala/aof/: Day01.scala  Day02.scala
2017/scala/aoc-2017/: build.sbt
2017/scala/aoc-2017/src/main/scala/aof/: Day.scala  Day01.scala  Day02.scala
2018/scala/aoc-2018/: build.sbt
2018/scala/aoc-2018/src/main/scala/aof/: Day01.scala  Day02.scala
2018/scala/aoc-2018/src/test/scala/aof/: TestTemplate.scala
2019/scala/aoc-2019/: build.sbt
2019/scala/aoc-2019/src/main/scala/aof/: Day.scala  Day11.scala  Day13.scala  Day14.scala  Day15.scala  Day18.scala  Day22.scala  Day3.scala  Day5.scala  Graph.scala  Vec.scala
2019/scala/aoc-2019/src/test/scala/aof/: Day12Test.scala  Day14Test.scala  Day17Test.scala  Day5Test.scala  Day9Test.scala
2020/scala/aoc-2020/: .scalafmt.conf  build.sbt
2020/scala/aoc-2020/src/main/scala/aof/: Day.scala  Day01.scala  Day02.scala  Day03.scala  Day04.scala  Day05.scala  Day06.scala  Day07.scala  Day08.scala  (+18 more)
2022/haskell/aoc-2022/: aoc2022.cabal  input-day.sh  run-ghcid.sh
2022/haskell/aoc-2022/app/: day01.hs  day02.hs  day03.hs  day04.hs  day05.hs  day06.hs  day07.hs
2022/haskell/aoc-2022/src/: Aoc.hs  Arr.hs
2022/haskell/aoc-2022/template/: dayXY.hs
2023/haskell/aoc-2023/: .gitignore  aoc2023.cabal  input-day.sh
2023/haskell/aoc-2023/app/: day01.hs  day02.hs  day03.hs  day04.hs
2023/haskell/aoc-2023/src/: Aoc.hs  Arr.hs
2025/rust/aoc-2025/: .gitignore  Cargo.toml
2025/rust/aoc-2025/src/: lib.rs
src/main/scala/aof/: Day.scala  Day1.scala  Day10.scala  Day11.scala  Day12.scala  Day13.scala  Day14.scala  Day15.scala  Day16.scala  Day17.scala  Day18.scala  Day19.scala  Day2.scala  Day20.scala  Day21.scala  Day23.scala  Day24.scala  Day25.scala  Day3.scala  Day4.scala  Day5.scala  Day6.scala  Day7.scala  Day8.scala  Day9.scala  Graph.scala  IntComputer.scala
src/test/scala/aof/: Day10Test.scala  Day12Test.scala  Day14Test.scala  Day16Test.scala  Day17Test.scala  Day3Test.scala  Day5Test.scala  Day6Test.scala  Day7Test.scala  Day9Test.scala
template/haskell/aoc-template/: aoc20XY.cabal  input-day.sh
template/haskell/aoc-template/src/: Aoc.hs  Arr.hs
template/scala/aoc-template/: build.sbt
(+9 files in other folders)
