cabal-version:      2.4
name:               aoc2022
version:            0.1.0.0

author:             Sławomir Śledź
maintainer:         slawomir.sledz@gmail.com

library
    exposed-modules:  Aoc
    build-depends:    base ^>=4.16.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

common day
    build-depends:
        base ^>=4.16.3.0,
        aoc2022
    hs-source-dirs:   app
    default-language: Haskell2010

executable day01
    import:           day
    main-is:          day01.hs

executable day02
    import:           day
    main-is:          day02.hs

executable day03
    import:           day
    main-is:          day03.hs

executable day04
    import:           day
    main-is:          day04.hs