cabal-version:      2.4
name:               aoc2023
version:            0.1.0.0

author:             Sławomir Śledź
maintainer:         slawomir.sledz@gmail.com

library
    exposed-modules:
          Aoc
        , Arr
    build-depends:
          base ^>=4.16.3.0
        , containers ==0.6.6
    hs-source-dirs:   src
    default-language: Haskell2010

common day
    build-depends:
          base ^>=4.16.3.0
        , aoc2023
        , containers ==0.6.6
    hs-source-dirs:   app
    default-language: Haskell2010

executable day01
    import:           day
    main-is:          day01.hs
